# SquareLine_Project

./: .gitignore  CMakeLists.txt  font  lv_conf.h  make.bat  temp.txt  temp1.txt  test.py
inc/: qt5.hpp
model/: network_1.c  network_1.h  network_1_config.h  network_1_data.c  network_1_data.h  network_1_data_params.c  network_1_data_params.h  network_1_generate_report.txt
src/: TestTFLite.cpp  cubeai.cpp  facenet.cpp  main copy.cpp  main.c  main.cpp  miniprogram.cpp  mqtt copy.cpp  mqtt.cpp  my_ui.c  qt5.cpp  test.cpp  utils.cpp
ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
ui/fonts/: ui_font_Fontcn15.c  ui_font_Fontcn18.c  ui_font_Fontcn20.c  ui_font_Fontcn25.c  ui_font_Fontcn30.c  ui_font_Fontcnmsg.c
ui/images/: ui_img_123_png.c  ui_img_2_png.c  ui_img_backgroud1_png.c  ui_img_backgroud2_png.c  ui_img_backgroud3_png.c  ui_img_backgroud4_png.c  ui_img_backgroud_png.c  ui_img_face_png.c
ui/screens/: ui_Screen1.c
yolov8-face-landmarks-opencv-dnn/: main.cpp  main.py  main_fqa.cpp  main_fqa.py
